more flicker fix attempts

--- a/client/animations.css
+++ b/client/animations.css
@@ -67,18 +67,17 @@
   transition: opacity 300ms ease-in;
 }
 
-@media only screen and (min-width: 600px) {
+ @media only screen and (max-width: 600px) {
 	.containeranimation{
-    min-height: 480px;
+    min-height: 490px;
   }
 }
-
-/* Medium devices (landscape tablets, 768px and up) */
+/*
 @media only screen and (min-width: 768px) {
   .containeranimation{
     min-height: 225px;
   }
-}
+} */
 
 .err-appear{
     background-color: #e54053;
